--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,37 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Gerogia, sans-serif;
     margin: 0;
     padding: 0;
 }
 
 h1 {
+    
+    background-color: #000000;
+    color: #FFFF8F;
     text-align: center;
+    padding: 50px 0;
+    text-align: center;
+    font-family: Georgia, serif;
     font-size: 36px;
     margin: 20px 0;
 }
 
 h2 {
+    font-family: Georgia, serif;
     text-align: center;
     font-size: 24px;
     margin: 10px 0;
 }
 
 nav {
+    font-family: Georgia, serif;
     display: flex;
     justify-content: center;
     margin: 20px 0;
 }
 
 nav a {
+    font-family: Georgia, serif;
     font-size: 18px;
     margin: 0 10px;
     text-decoration: none;
