--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
 
 h1 {
     
-    background-color: #000000;
-    color: #FFFF8F;
+    background-color: #FFFF8F;
+    color: #000000;
     text-align: center;
     padding: 50px 0;
     text-align: center;
