--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ nav a {
     color: black;
 }
 
-background {
+.background {
   background-image: url(""C:\Users\jackson.toncrey\Downloads\code.jpg"");
   background-size: cover;
   background-repeat: no-repeat;
