--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ h1 {
     font-family: Georgia, serif;
     font-size: 36px;
     margin: 20px 0;
+     border: 1px solid black;
+  padding: 20px;
 }
 
 h2 {
@@ -21,6 +23,9 @@ h2 {
     text-align: center;
     font-size: 24px;
     margin: 10px 0;
+     border: 1px solid black;
+  padding: 20px;
+
 }
 
 nav {
@@ -28,6 +33,9 @@ nav {
     display: flex;
     justify-content: center;
     margin: 20px 0;
+     border: 1px solid black;
+  padding: 20px;
+
 }
 
 nav a {
@@ -36,6 +44,9 @@ nav a {
     margin: 0 10px;
     text-decoration: none;
     color: black;
+     border: 1px solid black;
+  padding: 20px;
+
 }
 
 
