--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ nav a {
     font-size: 18px;
     margin: 0 10px;
     text-decoration: none;
-    color: black;
+    color: #FFFF8F;
         border: 1px solid black;
   padding: 20px;
 
