--- a/CaseProject/styles.css
+++ b/CaseProject/styles.css
@@ -1,25 +1,27 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Gerogia, sans-serif;
   margin: 0;
   padding: 0;
 }
 
 header {
-  background-color: lightgray;
+  background-color: red;
   display: flex;
   justify-content: space-between;
   padding: 20px;
-  align-items: center;
+  align-items: left;
 }
 
 header h1 {
   font-size: 32px;
   margin: 0;
+  text-align: center;
 }
 
 header p {
   font-size: 18px;
   margin: 0;
+  text-align: center;
 }
 
 nav {
@@ -33,10 +35,12 @@ nav a {
   text-decoration: none;
   color: black;
   margin-right: 10px;
+  text-align: center;
 }
 
 section {
   padding: 40px;
+  
 }
 
 section h2 {
