--- a/CaseProject/styles.css
+++ b/CaseProject/styles.css
@@ -15,13 +15,13 @@ header {
 header h1 {
   font-size: 32px;
   margin: 0;
-  text-align: center;
+  text-align: left;
 }
 
 header p {
   font-size: 18px;
   margin: 0;
-  text-align: center;
+  text-align: left;
 }
 
 nav {
