--- a/CaseProject/styles.css
+++ b/CaseProject/styles.css
@@ -5,17 +5,26 @@ body {
 }
 
 header {
-  background-color: CC2121;
-  display: flex;
-  justify-content: space-between;
-  padding: 20px;
-  align-items: center;
-}
+  background-color: #CC2121;
+    color: #000000;
+    text-align: center;
+    padding: 50px 0;
+    text-align: center;
+    font-family: Georgia, serif;
+    font-size: 36px;
+    margin: 20px 0;
+ 
 
 header h1 {
-  font-size: 32px;
-  margin: 0;
-  text-align: left;
+   background-color: #CC2121;
+    color: #000000;
+    text-align: center;
+    padding: 50px 0;
+    text-align: center;
+    font-family: Georgia, serif;
+    font-size: 36px;
+    margin: 20px 0;
+ 
 }
 
 header p {
@@ -42,8 +51,14 @@ section {
 }
 
 section h2 {
-  font-size: 24px;
-  margin-bottom: 20px;
+   background-color: #CC2121;
+    color: #000000;
+    text-align: center;
+    padding: 50px 0;
+    text-align: center;
+    font-family: Georgia, serif;
+    font-size: 36px;
+    margin: 20px 0;
 }
 
 section p {
@@ -101,10 +116,11 @@ section p {
 }
 
 footer {
-  background-color: CC2121;
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  font-size: 18px;
-  color: gray;
-}
+  background-color: #CC2121;
+    color: #000000;
+    text-align: center;
+    padding: 50px 0;
+    text-align: center;
+    font-family: Georgia, serif;
+    font-size: 36px;
+    margin: 20px 0;
