--- a/CaseProject/styles.css
+++ b/CaseProject/styles.css
@@ -5,15 +5,9 @@ body {
 }
 
 header {
-  background-color: #CC2121;
-    color: #000000;
-    text-align: center;
-    padding: 40px 0;
-    text-align: center;
-    font-family: Georgia, serif;
-    font-size: 36px;
-    margin: 20px 0;
- 
+.back {
+  background-image: url(matte.jpg);
+}
 
 header h1 {
    background-color: #CC2121;
