--- a/CaseProject/styles.css
+++ b/CaseProject/styles.css
@@ -7,6 +7,12 @@ body {
 header {
 .back {
   background-image: url(matte.jpg);
+   background-size: cover;
+  background-position: center;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
  
 }
 
