--- a/CaseProject/styles.css
+++ b/CaseProject/styles.css
@@ -19,128 +19,13 @@ body {
 
 
 header h1 {
-
+    text-shadow: 1px 1px black;
     color: #FFD700;
     text-align: center;
-    
     text-align: center;
-    font-family: Allura, serif;
-    font-size: 36px;
+    font-family: Allura, cursive;
+    font-size: 100px;
     margin: 20px 0;
  
 }
 
-header p {
-  font-size: 18px;
-  margin: 0;
-  text-align: left;
-}
-
-nav {
-     font-family: Georgia, serif;
-    font-size: 18px;
-    margin: 0 10px;
-    text-decoration: none;
-    color: #000000;
-        border: 1px solid black;
-  padding: 20px;
-
-}
-
-nav a {
-  padding: 10px 20px;
-  font-size: 25px;
-  text-decoration: none;
-  color: black;
-  margin-right: 10px;
-}
-
-section {
-     font-family: Georgia, serif;
-    font-size: 18px;
-    margin: 0 10px;
-    text-decoration: none;
-    color: #000000;
-        border: 1px solid red;
-  padding: 20px;
-
-}
-
-section h2 {
-   background-color: #CC2121;
-    color: #000000;
-    text-align: center;
-    padding: 50px 0;
-    text-align: center;
-    font-family: Georgia, serif;
-    font-size: 36px;
-    margin: 20px 0;
-}
-
-section p {
-  font-size: 18px;
-  line-height: 1.5;
-  margin-bottom: 20px;
-}
-
-.hot-deals {
-  background-color: CC2121;
-  padding: 20px;
-  margin-top: 20px;
-  text-align: center;
-}
-
-.hot-deals h3 {
-  font-size: 20px;
-  margin-bottom: 10px;
-}
-
-.hot-deals ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-}
-
-.hot-deals li {
-  width: 33%;
-  margin-bottom: 20px;
-}
-
-.contact-us {
-    font-family: Georgia, serif;
-    font-size: 18px;
-    margin: 0 10px;
-    text-decoration: none;
-    color: #000000;
-        border: 1px solid red;
-  padding: 20px;
-
-}
-
-.contact-us input, .contact-us textarea {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  font-size: 18px;
-}
-
-.contact-us input[type="submit"] {
-  background-color: CC2121;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-}
-
-footer {
-  background-color: #CC2121;
-    color: #000000;
-    text-align: center;
-    padding: 50px 0;
-    text-align: center;
-    font-family: Georgia, serif;
-    font-size: 36px;
-    margin: 20px 0;
