--- a/CaseProject/styles.css
+++ b/CaseProject/styles.css
@@ -23,7 +23,7 @@ header h1 {
     color: #FFD700;
     text-align: center;
     text-align: center;
-    font-family: Allura, cursive;
+    font-family: brush script mt, cursive;
     font-size: 100px;
     margin: 20px 0;
  
