--- a/CaseProject/Shop/styles.css
+++ b/CaseProject/Shop/styles.css
@@ -1,33 +1,71 @@
-#wrapper { 
-    display: flex;
-    } 
-li{ 
-    width: 100px; 
-    height: 30px; 
-    list-style: none; 
-    background-color: rgb(1, 4, 49); 
-    border-radius: 10px; 
-    margin: 5px; 
-    padding: 5px; 
-    color: white; 
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-} 
-#badge {
-     width: 20px; 
-     height: 20px; 
-     background-color: #f0ad4e; 
-     color: white; 
-     padding: 2px 2px; 
-     border-radius: 5px; 
-     margin-left: 10px; 
-     text-align: center; 
-     float: right; 
-     } 
-#items #badge { /* hides the count badge on the shopping list */ 
-    display: none; 
-} 
-#container { 
-    margin: 50px;
-} 
+* {
+    margin: 0;
+    padding: 0;
+}
+body {
+    background-color: #F2EEE9;
+    font: normal 13px/1.5 Georgia, Serif;
+    color: #333;
+}
+.wrapper {
+    width: 705px;
+    margin: 20px auto;
+    padding: 20px;
+}
+h1 {
+    display: inline-block;
+    background-color: #333;
+    color: #fff;
+    font-size: 20px;
+    font-weight: normal;
+    text-transform: uppercase;
+    padding: 4px 20px;
+    float: left;
+}
+.clear {
+    clear: both;
+}
+.items {
+    display: block;
+    margin: 20px 0;
+}
+.item {
+    background-color: #fff;
+    float: left;
+    margin: 0 10px 10px 0;
+    width: 205px;
+    padding: 10px;
+    height: 290px;
+}
+.item img {
+    display: block;
+    margin: auto;
+}
+h2 {
+    font-size: 16px;
+    display: block;
+    border-bottom: 1px solid #ccc;
+    margin: 0 0 10px 0;
+    padding: 0 0 5px 0;
+}
+button {
+    border: 1px solid #722A1B;
+    padding: 4px 14px;
+    background-color: #fff;
+    color: #722A1B;
+    text-transform: uppercase;
+    float: right;
+    margin: 5px 0;
+    font-weight: bold;
+    cursor: pointer;
+}
+span {
+    float: right;
+}
+.shopping-cart {
+    display: inline-block;
+    background: url('http://cdn1.iconfinder.com/data/icons/jigsoar-icons/24/_cart.png') no-repeat 0 0;
+    width: 24px;
+    height: 24px;
+    margin: 0 10px 0 0;
+}
