--- a/CaseProject/styles.css
+++ b/CaseProject/styles.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.5);
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -22,7 +22,7 @@ form {
   align-items: center;
 }
 
-label, input, select, button {
+label, input, button {
   margin: 10px 0;
 }
 
@@ -34,6 +34,11 @@ button {
   border-radius: 5px;
   cursor: pointer;
 }
+
+.hidden {
+  display: none;
+}
+
 
 
 body {
